src/objects/datapro__Privacy_Detail_PersonAccount__c.object
<CustomObject>
    <fields>
        <fullName>datapro__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Privacy Detail PersonAccounts</relationshipLabel>
        <relationshipName>Privacy_Detail_PersonAccounts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>datapro__Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__Lawful_Basis__c</fullName>
        <label>Lawful Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__Withdrawn_date__c</fullName>
        <label>Withdrawn date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__hasFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Privacy Detail PersonAccount</label>
    <nameField>
        <displayFormat>PDA -{0000}</displayFormat>
        <label>Privacy Detail PersonAccount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Detail PersonAccounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>